// Copyright 2021 Lumberjack authors (see AUTHORS file)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// TODO(b/200983538): Rename proto package name.
package proto;

import "protos/v1alpha1/audit_log_request.proto";

// When we move to Github, remove the GoB URL from package names.
option go_package = "github.com/abcxyz/lumberjack/clients/go/apis/v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "AuditLogAgentProto";
option java_package = "com.abcxyz.lumberjack.v1alpha1";

// The parameters returned from ProcessLog.
message AuditLogResponse {
  // Optional processed audit log request.
  // If unset and errorless, it means the processing is terminal,
  // which means the audit log entry has been written.
  AuditLogRequest result = 1;
}

// Service for processing an audit log request.
service AuditLogAgent {
  rpc ProcessLog(AuditLogRequest) returns (AuditLogResponse) {};
}